Hurray! I have a working model :D

--- a/nbs/dl2/02_CNN_From_Scratch.ipynb
+++ b/nbs/dl2/02_CNN_From_Scratch.ipynb
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1132,7 @@
     "        return self.activations\n",
     "    \n",
     "    def backwardsPropagation(self):\n",
-    "        self.activationMatrix.storedGradients = (self.activationMatrix > 0) * self.activations.storedGradients"
+    "        self.activationMatrix.storedGradients = (self.activationMatrix > 0).float() * self.activations.storedGradients"
    ]
   },
   {
@@ -1160,12 +1160,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MeanSquaredError():\n",
-    "    def __call_(self, predictedVector, expectedVector):\n",
+    "    def __call__(self, predictedVector, expectedVector):\n",
     "        self.predictedVector = predictedVector\n",
     "        self.expectedVector = expectedVector\n",
     "        self.meanSquaredError = (self.predictedVector - self.expectedVector).pow(2).mean()\n",
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1191,7 @@
     "    def __call__(self, normalizedInputs, expectedOutputs):\n",
     "        activations = normalizedInputs\n",
     "        for layer in self.convolutionLayers: activations = layer(activations)\n",
-    "        self.cost(activations, expectedOutputs)\n",
+    "        return self.cost(activations, expectedOutputs)\n",
     "        \n",
     "    def backwardsPropagation(self):\n",
     "        self.cost.backwardsPropagation()\n",
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1210,11 +1210,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = CustomModel(libraryKiamingWeightedMatrix, finalLibraryKiamingWeightedMatrix, biasVectorLayerOne, biasVectorLayerTwo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(30.9812)"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model(xTrainingSetNormalized, yTrainingSet.float())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.backwardsPropagation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dun\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.convolutionLayers[2].weightedMatrix.storedGradients\n",
+    "print('dun')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customeModelWeightedLayer2Gradients = model.convolutionLayers[2].weightedMatrix.storedGradients\n",
+    "customeModelBiasLayer2Gradients = model.convolutionLayers[2].biasVector.storedGradients\n",
+    "customeModelWeightedLayer1Gradients = model.convolutionLayers[0].weightedMatrix.storedGradients\n",
+    "customeModelBiasLayer1Gradients = model.convolutionLayers[0].biasVector.storedGradients\n",
+    "customeModelInputGradients = model.convolutionLayers[0].inputVector.storedGradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testNear(w22.grad, customeModelWeightedLayer2Gradients)\n",
+    "testNear(b22.grad, customeModelBiasLayer2Gradients)\n",
+    "testNear(w12.grad, customeModelWeightedLayer1Gradients)\n",
+    "testNear(b12.grad, customeModelBiasLayer1Gradients)\n",
+    "testNear(xt2.grad, customeModelInputGradients)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LinearComboEnhanced():\n",
+    "    def __init__(self, weightedMatrix, biasVector):\n",
+    "        self.weightedMatrix = weightedMatrix\n",
+    "        self.biasVector = biasVector\n",
+    "        \n",
+    "    def __call__(self, inputVector):\n",
+    "        self.inputVector = inputVector\n",
+    "        self.activationMsatrix = self.inputVector @ self.weightedMatrix + self.biasVector\n",
+    "        return self.activationMatrix\n",
+    "    \n",
+    "    def backwardsPropagation(self):\n",
+    "        self.inputVector.storedGradients = self.activationMatrix.storedGradients @ self.weightedMatrix.t()\n",
+    "        self.weightedMatrix.storedGradients = torch.einsum('ij,jk->ik', self.inputVector, self.activationMatrix.storedGradients)\n",
+    "        self.biasVector.storedGradients = self.activationMatrix.storedGradients.sum(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomModelEnhanced():\n",
+    "    def __init__(self, weightedLayerOne, weightedLayerTwo, biasVectorOne, biasVectorTwo):\n",
+    "        self.convolutionLayers = [LinearCombo(weightedLayerOne, biasVectorOne), ReLU(), LinearCombo(weightedLayerTwo, biasVectorTwo)]\n",
+    "        self.cost = MeanSquaredError()\n",
+    "    def __call__(self, normalizedInputs, expectedOutputs):\n",
+    "        activations = normalizedInputs\n",
+    "        for layer in self.convolutionLayers: activations = layer(activations)\n",
+    "        return self.cost(activations, expectedOutputs)\n",
+    "        \n",
+    "    def backwardsPropagation(self):\n",
+    "        self.cost.backwardsPropagation()\n",
+    "        for layer in reversed(self.convolutionLayers): layer.backwardsPropagation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "libraryKiamingWeightedMatrix.storedGradients,biasVectorLayerOne.storedGradients,finalLibraryKiamingWeightedMatrix.storedGradients,biasVectorLayerTwo.storedGradients = [None]*4 \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enhancedModel = CustomModelEnhanced(libraryKiamingWeightedMatrix, finalLibraryKiamingWeightedMatrix, biasVectorLayerOne, biasVectorLayerTwo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(30.9812)"
+      ]
+     },
+     "execution_count": 261,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enhancedModel(xTrainingSetNormalized, yTrainingSet.float())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enhancedModel.backwardsPropagation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customEnhancedModelWeightedLayer2Gradients = enhancedModel.convolutionLayers[2].weightedMatrix.storedGradients\n",
+    "customEnhancedModelBiasLayer2Gradients = enhancedModel.convolutionLayers[2].biasVector.storedGradients\n",
+    "customEnhancedModelWeightedLayer1Gradients = enhancedModel.convolutionLayers[0].weightedMatrix.storedGradients\n",
+    "customEnhancedModelBiasLayer1Gradients = enhancedModel.convolutionLayers[0].biasVector.storedGradients\n",
+    "customEnhancedModelInputGradients = enhancedModel.convolutionLayers[0].inputVector.storedGradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testNear(w22.grad, customEnhancedModelWeightedLayer2Gradients)\n",
+    "testNear(b22.grad, customEnhancedModelBiasLayer2Gradients)\n",
+    "testNear(w12.grad, customEnhancedModelWeightedLayer1Gradients)\n",
+    "testNear(b12.grad, customEnhancedModelBiasLayer1Gradients)\n",
+    "testNear(xt2.grad, customEnhancedModelInputGradients)"
    ]
   },
   {
