--- a/nbs/dl2/02a_why_sqrt5.ipynb
+++ b/nbs/dl2/02a_why_sqrt5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "(torch.Size([50000, 1, 28, 28]), torch.Size([10000, 1, 28, 28]))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "(50000, tensor(10))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "torch.Size([100, 1, 28, 28])"
       ]
      },
-     "execution_count": null,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "torch.Size([32, 1, 5, 5])"
       ]
      },
-     "execution_count": null,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,19 +179,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((tensor(-0.0043, grad_fn=<MeanBackward1>),\n",
-       "  tensor(0.1156, grad_fn=<StdBackward0>)),\n",
-       " (tensor(0.0212, grad_fn=<MeanBackward1>),\n",
-       "  tensor(0.1176, grad_fn=<StdBackward0>)))"
+       "((tensor(0.0016, grad_fn=<MeanBackward0>),\n",
+       "  tensor(0.1145, grad_fn=<StdBackward0>)),\n",
+       " (tensor(-0.0268, grad_fn=<MeanBackward0>),\n",
+       "  tensor(0.1124, grad_fn=<StdBackward0>)))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,17 +211,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.0107, grad_fn=<MeanBackward1>),\n",
-       " tensor(0.5978, grad_fn=<StdBackward0>))"
+       "(tensor(-0.0227, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.6690, grad_fn=<StdBackward0>))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,17 +272,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.5547, grad_fn=<MeanBackward1>),\n",
-       " tensor(1.0199, grad_fn=<StdBackward0>))"
+       "(tensor(0.5121, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.9937, grad_fn=<StdBackward0>))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,17 +294,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.2219, grad_fn=<MeanBackward1>),\n",
-       " tensor(0.3653, grad_fn=<StdBackward0>))"
+       "(tensor(0.2017, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.4109, grad_fn=<StdBackward0>))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "torch.Size([32, 1, 5, 5])"
       ]
      },
-     "execution_count": null,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "25"
       ]
      },
-     "execution_count": null,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "(32, 1)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "(25, 800)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        " 0.5773502691896257)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,16 +434,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.5788)"
+       "tensor(0.5758)"
       ]
      },
-     "execution_count": null,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "0.5773502691896258"
       ]
      },
-     "execution_count": null,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,17 +489,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.5603, grad_fn=<MeanBackward1>),\n",
-       " tensor(1.0921, grad_fn=<StdBackward0>))"
+       "(tensor(0.5375, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.9461, grad_fn=<StdBackward0>))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,17 +511,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.2186, grad_fn=<MeanBackward1>),\n",
-       " tensor(0.3437, grad_fn=<StdBackward0>))"
+       "(tensor(0.2194, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.4000, grad_fn=<StdBackward0>))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,17 +568,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.0875, grad_fn=<MeanBackward1>),\n",
-       " tensor(0.0065, grad_fn=<StdBackward0>))"
+       "(tensor(-0.0142, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.0067, grad_fn=<StdBackward0>))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,16 +600,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.0054), tensor(0.0333))"
+       "(tensor(0.0058), tensor(0.0371))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,17 +641,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(-0.0352, grad_fn=<MeanBackward1>),\n",
-       " tensor(0.4043, grad_fn=<StdBackward0>))"
+       "(tensor(-0.3650, grad_fn=<MeanBackward0>),\n",
+       " tensor(0.1761, grad_fn=<StdBackward0>))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,16 +663,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.0093), tensor(0.4231))"
+       "(tensor(-0.1017), tensor(0.3109))"
       ]
      },
-     "execution_count": null,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,9 +692,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\r\n",
+      "  File \"./notebook2script.py\", line 3, in <module>\r\n",
+      "    import json,fire,re\r\n",
+      "ModuleNotFoundError: No module named 'fire'\r\n"
+     ]
+    }
+   ],
    "source": [
     "!./notebook2script.py 02a_why_sqrt5.ipynb"
    ]
@@ -709,7 +720,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_fastai",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
