--- a/nbs/dl2/02_CNN_From_Scratch.ipynb
+++ b/nbs/dl2/02_CNN_From_Scratch.ipynb
@@ -1408,6 +1408,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 02_CNN_From_Scratch.ipynb to exp/nb_02.py\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python notebook2script.py 02_CNN_From_Scratch.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1416,7 +1433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch_fastai",
    "language": "python",
    "name": "python3"
   },
