--- a/nbs/dl2/03_minibatch_training.ipynb
+++ b/nbs/dl2/03_minibatch_training.ipynb
@@ -2082,7 +2082,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch_fastai",
    "language": "python",
    "name": "python3"
   },
